-Aggiunto Punteggio.

- implementata coda

-Aggiunta morte alla collisione con il serpente

-Aggiunta scritta "Game Over"