@@ -11,13 +11,6 @@
 
 
 <body>
-
-    <h1 id="insert">
-        Score:
-
-    </h1>
-    <h1 id= "GameOver"></h1>
-
     <div id="container"></div>
     <script src="./phaser.js"></script>
     <script src="./snake.js"></script>
